ui fixes and bug fixes

--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -22,3 +22,17 @@
     width: 450px;
   }
 }
+
+.w100 {
+  width: 100%;
+}
+
+.h100 {
+  height: 100%;
+}
+
+.center-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
