--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<a href="https://github.com/iceboxx89/memory-game-angular" target="_blank">
+  <img loading="lazy" width="149" height="149"
+    src="https://github.blog/wp-content/uploads/2008/12/forkme_left_red_aa0000.png?resize=149%2C149"
+    class="attachment-full size-full" alt="Fork me on GitHub" data-recalc-dims="1" style="position: absolute;">
+</a>
 <app-board style="width: 100%; height: 100%;"></app-board>
 
 <router-outlet></router-outlet>
