--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,3 +1,13 @@
+.board {
+  width: 100%;
+  height: auto;
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
+}
 .board-container {
   display: flex;
   flex-wrap: wrap;
@@ -11,7 +21,7 @@
 .overlay {
   width: 100%;
   height: 100%;
-  background-color: #7f8c8d;
+  background-color: transparent;
   position: absolute;
   top: 0;
   left: 0;
